# GenericIO

./: CMakeLists.txt  README.md
cmake/Modules/: BuildBlosc.cmake
